--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,9 @@
 <ul>
     <li *ngFor="let food of foods">
-        <img src="{{foods}}" alt="">
+        <a>
+            <img src="{{food}}" alt="">
+
+        </a>
+        
     </li>
 </ul>
